# packaging-publishing-jr947

./: .gitignore  LICENSE  mkdocs.yml  pyproject.toml
docs/cancer-prediction-jr947/: cancer_model.md
src/cancer_prediction_jr947/scripts/: app.py
tests/: test_cancer_model.py
