[project]
name = "cancer-prediction-jr947"
version = "0.1.0"
description = "A basic cancer prediction model..."
authors = [{name = "Josh R"}]

requires-python = ">=3.7.11"
dependencies = [
    "click>=8.1.8",
    "ipykernel>=6.16.2",
    "matplotlib>=3.5.3",
    "numpy>=1.21.6",
    "pandas>=1.3.5",
    "scikit-learn>=1.0.2",
]

[dependency-groups]
dev = [
    "black>=23.3.0",
    "flake8>=5.0.4",
    "isort>=5.11.5",
]

[project.scripts]
cancer-prediction = "cancer_prediction_jr947.scripts.app:cli"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = true
