[project]
name = "cancer-prediction-jr947"
version = "0.1.0"
description = "A basic cancer prediction model..."
authors = [{name = "Josh R"}]

requires-python = ">=3.7.11"
dependencies = [
    "click>=8.1.8",
    "ipykernel>=6.16.2",
    "matplotlib>=3.5.3",
    "numpy>=1.21.6",
    "pandas>=1.3.5",
    "scikit-learn>=1.0.2",
]

[dependency-groups]
dev = [
    "black>=23.3.0",
    "flake8>=5.0.4",
    "isort>=5.11.5",
    "mkdocs>=1.2.4",
    "mkdocstrings[python]>=0.21.2",
    "mypy>=1.4.1",
    "pre-commit>=2.21.0",
]

[project.scripts]
cancer-prediction = "cancer_prediction_jr947.scripts.app:cli"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.env]
PYTHONPATH = "src" # then use uv run python -m unittest

[tool.black]
line-length = 88
exclude = '''
/(
      .eggs         
    | .git          
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
virtual_env = ".venv"

[flake8]
max-line-length = 88
